refactor: More verbose information when creating new JVM.